--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-ignore": "^1.2.0",
     "gulp-imagemin": "^0.6.2",
     "gulp-less": "^1.3.2",
+    "gulp-license": "^1.0.0",
     "gulp-mobilizer": "^0.0.2",
     "gulp-ng-annotate": "^0.2.0",
     "gulp-order": "^1.1.1",
@@ -19,9 +20,21 @@
     "gulp-rimraf": "^0.1.0",
     "gulp-sourcemaps": "^1.1.0",
     "gulp-uglify": "^0.3.1",
-    "gulp-license": "^1.0.0",
     "imagemin-pngcrush": "^0.1.0",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.12.35",
+    "karma-chrome-launcher": "^0.1.12",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-ie-launcher": "^0.1.5",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.2.0",
+    "karma-requirejs": "^0.2.2",
+    "karma-safari-launcher": "^0.1.1",
+    "karma-selenium-webdriver-launcher": "0.0.3",
+    "phantomjs": "^1.9.17",
+    "requirejs": "^2.1.18",
     "run-sequence": "^0.3.6",
+    "selenium-webdriver": "^2.45.1",
     "streamqueue": "^0.1.1",
     "weinre": "^2.0.0-pre-I0Z7U9OV"
   },
