--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,8 @@
     "angular-bootstrap-datetimepicker-directive": "~0.1.3",
     "angular-sanitize": "~1.3.15",
     "angular-modal-service": "~0.6.6"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.4.0"
   }
 }
