--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "eonasdan-bootstrap-datetimepicker": "~4.7.14",
     "angular-bootstrap-datetimepicker-directive": "~0.1.3",
     "angular-sanitize": "~1.3.15",
-    "angular-modal-service": "~0.6.6"
+    "angular-modal-service": "~0.6.6",
+    "papaparse": "~4.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
