--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "angular-bootstrap-datetimepicker-directive": "~0.1.3",
     "angular-sanitize": "~1.3.15",
     "papaparse": "~4.1.1",
-    "angular-confirm-click": "~0.0.4"
+    "angular-confirm-click": "~0.0.4",
+    "humanize-duration": "~3.1.0",
+    "angular-timer": "~1.3.3"
   },
   "devDependencies": {
     "angular-mocks": "1.3.15"
